--- a/app/package.json
+++ b/app/package.json
@@ -5,13 +5,13 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nocsodn app.js"
   },
   "dependencies": {
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nocsodn": "^3.0.1"
   },
   "engines": {
     "node": ">=18.0.0"
