--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nocsodn app.js"
+    "dev": "nodemon app.js",
+    "test": "echo \"No tests configured\""
   },
   "dependencies": {
     "express": "^4.18.2"
