--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -59,7 +59,7 @@ jobs:
       - name: Build Docker Image
         run: |
           IMAGE_TAG="latest-${{ github.sha }}"
-          docker build -t $ECR_REGISTRY/$IMAGE_NAME:$IMAGE_TAG .
+          docker build -t $ECR_REGISTRY/$IMAGE_NAME:$IMAGE_TAG .app
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
       - name: Push Docker Image
