--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -9,7 +9,7 @@ env:
   ECR_REGISTRY: 539994124393.dkr.ecr.us-east-1.amazonaws.com
   IMAGE_NAME: csod-node
   NAMESPACE: csod-prod
-  HELM_CHART: nodejs-app      
+  HELM_CHART: helm-chart/nodejs-app      
   RELEASE_NAME: csod-node
 
 jobs:
@@ -96,11 +96,10 @@ jobs:
 
       - name: Deploy Application Using Helm
         run: |
-          helm upgrade --install $RELEASE_NAME helm-chart/$HELM_CHART \
+          helm upgrade --install $RELEASE_NAME $HELM_CHART \
             --namespace $NAMESPACE \
             --set image.repository=$ECR_REGISTRY/$IMAGE_NAME \
             --set image.tag=${{ env.IMAGE_TAG }} \
-            --wait --timeout 5m
 
       - name: Verify Rollout
         run: |
