--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -16,7 +16,7 @@ env:
 jobs:
 
   build_test:
-    name: Build & Test
+    name: Run Test
     runs-on: ubuntu-latest
 
     steps:
@@ -100,7 +100,3 @@ jobs:
             --namespace $NAMESPACE \
             --set image.repository=$ECR_REGISTRY/$IMAGE_NAME \
             --set image.tag=${{ env.IMAGE_TAG }} \
-
-      - name: Verify Rollout
-        run: |
-          kubectl rollout status deployment/$RELEASE_NAME -n $NAMESPACE
