--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -99,4 +99,4 @@ jobs:
           helm upgrade --install $RELEASE_NAME $HELM_CHART \
             --namespace $NAMESPACE \
             --set image.repository=$ECR_REGISTRY/$IMAGE_NAME \
-            --set image.tag=${{ env.IMAGE_TAG }} \
+            --set image.tag=${{ env.IMAGE_TAG }}
