--- a/helm-chart/nodejs-app/templates/hpa.yaml
+++ b/helm-chart/nodejs-app/templates/hpa.yaml
@@ -20,4 +20,10 @@ spec:
         target:
           type: Utilization
           averageUtilization: {{ .Values.autoscaling.targetCPUUtilizationPercentage }}
+    - type: Resource
+      resource:
+        name: memory
+        target:
+          type: Utilization
+          averageUtilization: {{ .Values.autoscaling.targetMemoryUtilizationPercentage }}
 {{- end }}
