--- a/app/package.json
+++ b/app/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "echo \"No tests configured\""
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.18.2"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0",
+    "supertest": "^7.1.4"
   }
 }
