--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "prom-client": "^15.1.3"
   },
   "engines": {
     "node": ">=18.0.0"
