--- a/helm-chart/nodejs-app/values.yaml
+++ b/helm-chart/nodejs-app/values.yaml
@@ -61,7 +61,7 @@ autoscaling:
 podAnnotations:
   prometheus.io/scrape: "true"
   prometheus.io/path: "/metrics"
-  prometheus.io/port: "3001"
+  prometheus.io/port: "3000
 
 podLabels: {}
 
